# owl

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml
src/owl/: __init__.py
src/owl/_internal/: lazy.py  logger.py  registry.py  signature.py
src/owl/_monitor/: __init__.py  app.py  client.py  config.py  sanitize.py  server.py  snapshot.py  state.py
src/owl/augment/: __init__.py  transforms.py  types.py
src/owl/cli/: cmd_init.py  cmd_run.py  cmd_version.py  commands.py  main.py  templates.py
src/owl/cli/templates/: finetune.py  train.py  train.yaml  val_metric.py  validate_metric.yaml  validate_robust.yaml  visualization.yaml
src/owl/core/: __init__.py  app.py  config.py  context.py  criterion.py  dataset.py  engine.py  model.py  optimizer.py  routines.py  scheduler.py  schemas.py  status.py
src/owl/engine/: __init__.py  app.py  engine.py  pipeline.py  state.py
src/owl/toolkits/: __init__.py
src/owl/toolkits/common/: __init__.py  ckpt.py  console.py  fmt.py  fs.py  logger.py  metrics.py  registry.py  seed.py  types.py  validator.py
src/owl/toolkits/criterion/: __init__.py  base.py  types.py
src/owl/toolkits/data/: __init__.py  dataloader.py  dataset.py  types.py
src/owl/toolkits/data/augment/: transforms.py  types.py
src/owl/toolkits/data/collectors/: owl.py
src/owl/toolkits/evaluator/: __init__.py  base.py  default.py
src/owl/toolkits/model/: __init__.py  base.py  types.py
src/owl/toolkits/optimizer/: __init__.py  adamw.py
src/owl/toolkits/scheduler/: __init__.py  poly.py
src/owl/toolkits/visual/: base.py
src/owl/toolkits/visualizer/: __init__.py  base.py  default_mask.py
src/owl/utils/: __init__.py  console.py  file_io.py  img_aug.py  img_op.py  io.py  metrics.py  reflect.py  types.py  validator.py
tests/: fmt_test.py  test_auc.py  test_aug.py  test_console.py  test_dataloader.py  test_f1.py  test_log.py  test_newdir.py  test_yaml.py  train.yaml
tests/example/: example.json
