[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "owl-imdl"
version = "1.0.0"
description = "IMDL template engine"
readme = "README.md"
authors = [
  {name = "kwen", email = "aikwen@outlook.com"},
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "PyYAML>=6.0.2",
    "colorama>=0.4.5",
    "prettytable>=3.17.0",
    "python-statemachine>=3.0.0",
]

[project.scripts]
owl = "owl.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]